--- a/apps/Makefile
+++ b/apps/Makefile
@@ -1,18 +1,15 @@
 # Target programs
 programs := \
 	queue_tester_example.x \
+	queue_tester.x \
 	uthread_hello.x \
-	uthread_yield.x
-
-# FIXME: Remove this in student version
-programs += \
-	queue_usage_example.x \
-	queue_grader.x \
-	uthread_preempt.x \
+	uthread_yield.x \
+	test_preempt.x \
 	sem_buffer.x \
 	sem_count.x \
 	sem_prime.x \
-	sem_simple.x
+	sem_simple.x \
+	test_preempt.x
 
 # User-level thread library
 UTHREADLIB := libuthread
